# Expanda

./: .gitignore  pyproject.toml  setup.py
docs/source/: conf.py
src/expanda/: __init__.py  __main__.py  tokenization.py
src/expanda/ext/: hf_chem700K.py  hf_chemistry_std.py  hf_numina.py  hf_smolinstruct.py  hf_stackexchange_chemistry.py  huggingface.py  identity.py  wikipedia.py
tests/: test_tokenization.py
